fixed sector spacing issue

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ h4 {
   }
 
   .sector {
-    padding: 5rem 3rem;
+    padding: 10rem 3rem;
   }
 
   .sector-header {
